# transpocontrol

./: .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
backend/base/: helpers.py  models.py  serializers.py  urls.py  views.py
backend/base/migrations/: 0001_initial.py  0002_auto_20240510_1736.py  0003_owner_city.py  0004_supplier_client_trailer_truck.py  0005_alter_trailer_chassis_alter_trailer_plate_and_more.py  0006_alter_owner_gender.py  0006_supplystorage_supply.py  0007_alter_client_observation_alter_supplier_observation.py  0008_merge_20240624_1409.py  0009_category.py  0010_driver_contract.py  0011_client_image.py  0012_truck_image.py  0013_supplier_image.py  0014_trailer_image.py  0015_client_status_client_status_changed_at_and_more.py  0016_trailer_height_trailer_length_trailer_width.py  0017_driver_image.py  0018_alter_owner_image.py  0019_alter_trailer_status_changed_at_and_more.py
backend/configuration/: admin.py  configs.py  models.py  serializer.py  urls.py  utils.py  viewsets.py
backend/configuration/migrations/: 0001_initial.py  0002_populate_configurations.py
backend/invoice/: filters.py  models.py  serializers.py  urls.py  views.py
backend/invoice/migrations/: 0001_initial.py  0002_supplierinvoice_outstanding_amount_and_more.py  0003_supplierinvoice_payment_term_supplierinvoiceitem.py  0004_supplierinvoice_total_tax_amount_and_more.py  0005_supplierinvoice_is_annulled.py  0006_supplierinvoice_observation.py
backend/transpocargo/: middlewares.py  redis_cache.py  settings.py  urls.py  wsgi.py
backend/trips/: models.py  serializers.py  urls.py  views.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+272 files in other folders)
